--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,12 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>LENAClient</title>
+  <title>L.E.N.A.</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://unpkg.com/bootstrap@3.3.7/dist/css/bootstrap.min.css">
 </head>
 <body>
   <app-root>Loading...</app-root>
